--- a/journal/202206.md
+++ b/journal/202206.md
@@ -207,7 +207,16 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 _[TinyDecred](https://github.com/decred/tinydecred) is a Python toolkit for integrating Decred. It includes an experimental light GUI wallet based on PyQt5._
 
-- { _buck has been hacking on something very interesting, write up a summary or ask him for the details https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg ._ }
+@buck54321 has shared an [update](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) on the second version of TinyDecred he's been working since early 2021:
+
+- There is a working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C FFI).
+- A large portion of TinyWallet 2 is written in Go, combining the dcrwallet, btcwallet, and dcrlnd stuff behind a single C-shared interface.
+- Since a bunch of wallet code moved to Go, using dcrwallet directly, it is now possible (with some minor modifications to dcrlnd) to use TinyWallet 2 on Lightning.
+- TinyWallet 2 includes a web wallet app written in Go and JavaScript, which can run on desktop or a browser extension.
+- To demonstrate the tech there is an experimental Lightning Chat app for encrypted peer-to-peer messaging at very low cost, which can be integrated in websites via the browser extension.
+- TinyWallet 2 will have a DEX integration to trade DCR/BTC directly in the wallet.
+
+A lot of that is a heavy work-in-progress but is quite exciting. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) channel to follow the development.
 
 
 ### Documentation
