--- a/journal/202206.md
+++ b/journal/202206.md
@@ -212,8 +212,8 @@ _[TinyDecred](https://github.com/decred/tinydecred) is a Python toolkit for inte
 - There is a working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C FFI).
 - A large portion of TinyWallet 2 is written in Go, combining the dcrwallet, btcwallet, and dcrlnd stuff behind a single C-shared interface.
 - Since a bunch of wallet code moved to Go, using dcrwallet directly, it is now possible (with some minor modifications to dcrlnd) to use TinyWallet 2 on Lightning.
-- TinyWallet 2 includes a web wallet app written in Go and JavaScript, which can run on desktop or a browser extension.
-- To demonstrate the tech there is an experimental Lightning Chat app for encrypted peer-to-peer messaging at very low cost, which can be integrated in websites via the browser extension.
+- TinyWallet 2 wallet is designed to be available through any platform that supports web apps. This includes all major desktop and mobile platforms and browser extensions.
+- To demonstrate the tech, TinyWallet has prototyped in-wallet private chat via Lightning, and a website that your wallet can interact with to guide the user into opening a lightning channel and even finding others to add to their address book.
 - TinyWallet 2 will have a DEX integration to trade DCR/BTC directly in the wallet.
 
 A lot of that is a heavy work-in-progress but is quite exciting. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) channel to follow the development.
