Dev clean and polish

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -1,11 +1,5 @@
 # {DRAFT} Decred Journal – June 2022
 
-{ _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
-
-{ _Hint: Hints just add context. If it doesn't start with "Hint: ", it is a task. This was a hint._ }
-
-{ _Hint: Read the Guidelines on how to make DJ great: https://github.com/xaur/decred-news/blob/docs/guidelines.md ._}
-
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
@@ -20,7 +14,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 }
 
-Contents: { _Sync ToC at the very end, when all text is finished_ }
+Contents:
 
 - [Development](#development)
 - [People](#people)
@@ -33,8 +27,6 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
-
-{ _Add individual sections for high-impact announcements before Development, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
 
 ## Development
@@ -164,8 +156,8 @@ Feature development:
 
 Optimization for mobile devices:
 
-- Enhanced usability for [mobile device layouts](https://github.com/planetdecred/godcr/pull/963) (~11 fixes and changes).
-- Fixed ~11 more [layout issues](https://github.com/planetdecred/godcr/pull/971) for mobile screens.
+- ~11 fixes and changes to enhance usability for [mobile device layouts](https://github.com/planetdecred/godcr/pull/963).
+- ~11 more [layout fixes](https://github.com/planetdecred/godcr/pull/971) for mobile screens.
 
 UI design updates:
 
@@ -192,7 +184,7 @@ Bug fixes:
 
 { image candidates: 963, 950, 969, 996, 971!, 1002 }
 
-![{}](https://user-images.githubusercontent.com/19331824/174629462-b2d4e056-61e0-4409-afb3-cd9c038d0933.png) ![{}](https://user-images.githubusercontent.com/19331824/174629592-9963e32e-c7d2-4348-af56-22da9c606fa3.png)
+<img src="https://user-images.githubusercontent.com/19331824/174629462-b2d4e056-61e0-4409-afb3-cd9c038d0933.png" width="400" /> <img src="https://user-images.githubusercontent.com/19331824/174629592-9963e32e-c7d2-4348-af56-22da9c606fa3.png" width="400" />
 
 _Image: Improved mobile layout in GoDCR { 971.7, 971.9 }_
 
@@ -213,14 +205,14 @@ _[TinyDecred](https://github.com/decred/tinydecred) is a Python toolkit for inte
 
 @buck54321 has shared an [update](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) on the second version of TinyDecred he's been working since early 2021:
 
-- There is a working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C FFI).
+- There is a working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C [FFI](https://en.wikipedia.org/wiki/Foreign_function_interface)).
 - A large portion of TinyWallet 2 is written in Go, combining the dcrwallet, btcwallet, and dcrlnd stuff behind a single C-shared interface.
 - Since a bunch of wallet code moved to Go, using dcrwallet directly, it is now possible (with some minor modifications to dcrlnd) to use TinyWallet 2 on Lightning.
 - TinyWallet 2 wallet is designed to be available through any platform that supports web apps. This includes all major desktop and mobile platforms and browser extensions.
-- To demonstrate the tech, TinyWallet has prototyped in-wallet private chat via Lightning, and a website that your wallet can interact with to guide the user into opening a lightning channel and even finding others to add to their address book.
+- To demonstrate the tech, TinyWallet has prototyped in-wallet private chat via Lightning, and a website that your wallet can interact with to guide the user into opening a Lightning channel and even finding others to add to their address book.
 - TinyWallet 2 will have a DEX integration to trade DCR/BTC directly in the wallet.
 
-A lot of that is a heavy work-in-progress but is quite exciting. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) channel to follow the development.
+A lot of that is still a heavy work-in-progress but is quite exciting already. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) channel to follow the development.
 
 
 ### Documentation
@@ -244,16 +236,16 @@ _Image: Updated DCR issuance projection._
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.org website._
 
-- Added [disclaimer to Exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know only DCRDEX is self custodial and will not request additional information.
+- Added [disclaimer to Exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know that only DCRDEX is self-custodial and will not request additional information.
 - Removed [Contributors page](https://github.com/decred/dcrweb/pull/1047) after multiple discussions with the general consensus that it had poorly reflected reality.
 - [Updated](https://github.com/decred/dcrweb/pull/1048) Hugo, nginx, and Lottie webplayer. 
 - Removed the outdated [1.6 Release page](https://github.com/decred/dcrweb/pull/1049).
-- Added GoDCR to the [Wallets page](https://github.com/decred/dcrweb/pull/1044). { _July but we can make 1 small exception_ }
+- [Added](https://github.com/decred/dcrweb/pull/1044) GoDCR to the [Wallets page](https://decred.org/wallets/).
 
 
 ### Other
 
-- @degeri posted his [last update](https://github.com/decred/dcrbounty/pull/88) for the Bug Bounty program. One vulnerability report has been disclosed - Android and iOS wallets were lacking screenshot protections and this has been fixed. Congrats to @trapp3rhat for joining the Hall of Fame.
+- @degeri posted his [last update](https://github.com/decred/dcrbounty/pull/88) for the Bug Bounty program. One vulnerability report has been disclosed - Android and iOS wallets were lacking screenshot protections and this has been fixed. Congrats to @trapp3rhat for joining the Hall of Fame!
 
 
 ## People
