Gov add tspend turnout

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -8,6 +8,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Ethereum smart contract used in DCRDEX passed its first audit with great results.
 - Politeia busy with 3 proposals approved, 1 rejected and 3 new submitted.
+- First treasury spend transaction approved with the fixed spend policy { it was first after the fix, right? }
 - More ecosystem news, DCR listed on 2 exchanges
 - 
 - 
@@ -264,7 +265,7 @@ Community stats as of Jul 1 (compared to Jun 1):
 
 In June the new [treasury](https://dcrdata.decred.org/treasury) received 9,134 DCR worth $256K at June's average rate of $28.06. 2,426 DCR was spent to pay contractors, worth $68K at June's rate, or $100K at May's billing rate of $41.46.
 
-With the activation of DCP-0007 it was once again possible to pay contractors from the new treasury using the proper stakeholder-approved method. This [transaction](https://explorer.dcrdata.org/tx/18cede674d4d47919e7fcdb48fef0f56162a1a2f9536d5f08ac70e093a14e4f5) hit the required voting threshold (with 4,822 Yes votes and 0 No votes) on June 27th, there were 23 outputs, suggesting roughly this number of contractors/intermediaries were paid in the month, amounts ranging from 2.87 DCR to 767 DCR.
+With the activation of DCP-0007 it was once again possible to pay contractors from the new treasury using the proper stakeholder-approved method. This [transaction](https://explorer.dcrdata.org/tx/18cede674d4d47919e7fcdb48fef0f56162a1a2f9536d5f08ac70e093a14e4f5) hit the required voting threshold (with 4,822 Yes votes and 0 No votes) on June 27th, meaning the vote has "short-circuited" in 10 days without running for the full 12 days, and so the turnout among the ~14,400 tickets that had a chance to vote was ~33%. There were 23 outputs, suggesting roughly this number of contractors/intermediaries were paid in the month, amounts ranging from 2.87 DCR to 767 DCR. Check the [May 2021 issue](202105.md#new-treasury-activated) for a recap on how the new treasury works.
 
 As of July 3, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 799,639 DCR (17.9 million USD at $22.39).
 
