--- a/journal/202206.md
+++ b/journal/202206.md
@@ -304,7 +304,13 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l3n3qjwe-l5batou0&axis=time&visibility=true-true&mode=stepped) varied between 216-235 DCR, with 30-day [average](https://dcrstats.com/) at 223.7 DCR (+0.1).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l3n3qjwe-l5batou0&scale=linear&bin=block&axis=time) was 8.97-9.17 million DCR, meaning that 62.9-64.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l3n3qjwe-l5batou0&scale=linear&bin=block&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l3n3qjwe-l5batou0&scale=linear&bin=block&axis=time) was 8.97-9.17 million DCR, meaning that 62.9-**64.2%** of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l3n3qjwe-l5batou0&scale=linear&bin=block&axis=time) in Proof of Stake.
+
+![{}](https://github.com/bochinchero/dcrsnapshots/blob/main/2022-06/700/Staking_Daily_Participation_PC.png)
+
+_Image: Staking participation crawling up._
+
+{ _Or shall we feature ticket price this month? https://github.com/bochinchero/dcrsnapshots/blob/main/2022-06/700/Staking_Daily_TicketPrice_DCR.png }
 
 **VSP**: On Jul 1, ~7,150 (+250) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 16 VSPs managed 17.3% of the ticket pool (+0.5%).
 
@@ -321,23 +327,25 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 44 nodes (-
 
 ## Ecosystem
 
-- @jz [posted a script](https://twitter.com/jz_bz/status/1535350896091189249) for spinning up a Decred full node on popular systemd-based Linux distros with a simple `curl -L node.dcr.pw | bash` command. It is a good practice to not blindly run code from the Internet and read it before executing (the script is just 40 lines).
+@jz [posted a script](https://twitter.com/jz_bz/status/1535350896091189249) for spinning up a Decred full node on popular systemd-based Linux distros with a simple `curl -L node.dcr.pw | bash` command. It is a good practice to not blindly run code from the Internet and read it before executing (the script is just 40 lines).
 
-- [Guardarian](https://guardarian.com/) has [announced](https://www.reddit.com/r/decred/comments/v7mske/more_ways_to_buy_decred/) that buying and selling DCR for fiat is possible on their platform. Supported fiat currencies are EUR, USD, and GBP, and they can be sent over systems like MasterCard &Visa, Swift, Sepa, and Faster Payments! Fiat payouts go directly to user's bank account, while purchased coins go directly to users's wallet. There is a minimum amount to buy (EUR 30) and the service fee (EUR 2.49) is added to the exchange rate. Guardarian is licensed in Estonia.
+[Guardarian](https://guardarian.com/) has [announced](https://www.reddit.com/r/decred/comments/v7mske/more_ways_to_buy_decred/) that buying and selling DCR for fiat is possible on their platform. Supported fiat currencies are EUR, USD, and GBP, and they can be sent over systems like MasterCard &Visa, Swift, Sepa, and Faster Payments! Fiat payouts go directly to user's bank account, while purchased coins go directly to users's wallet. There is a minimum amount to buy (EUR 30) and the service fee (EUR 2.49) is added to the exchange rate. Guardarian is licensed in Estonia.
 
-- [Bitpanda](https://www.bitpanda.com/en) announced that [DCR is listed](https://twitter.com/bitpanda/status/1537047267647037442) on their exchange and acknowledged its open governance and sustainable funding. Bitpanda is [headquartered](https://en.wikipedia.org/wiki/Bitpanda) in Vienna, Austria.
+[Bitpanda](https://www.bitpanda.com/en) announced that [DCR is listed](https://twitter.com/bitpanda/status/1537047267647037442) on their exchange and acknowledged its open governance and sustainable funding. Bitpanda is [headquartered](https://en.wikipedia.org/wiki/Bitpanda) in Vienna, Austria.
 
-- BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing to stake with less than a full ticket (recently around 220 DCR). The reveal followed some [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for its custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
+BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing to stake with less than a full ticket (recently around 220 DCR). The reveal followed some [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for its custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
 
-- [JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs and get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins and has 3 jobs posted. The founder has dropped the announcement in our #trading chat, saying that DCR is supported since launch:
+[JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs and get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins and has 3 jobs posted. The founder has dropped the announcement in our #trading chat, saying that DCR is supported since launch:
 
 > you can post a job and choose dcr as a payment coin, added it just for the bison crew 😉 [@Toussaint](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$uxS2SUWZRUVbKH9DMiok_uuiomuZmq82q7bI61wDuW0))
 
-- VSP users may find these two tables useful for evaluating and choosing VSP providers: one summarizing how legacy VSPs [have been shutdown](https://github.com/decred/vspd/issues/231#issuecomment-774877129), and another showing how the VSP operators [have been upgrading](https://github.com/decred/vspd/issues/231#issuecomment-1046703692) their servers (earlier is better).
+VSP users may find these two tables useful for evaluating and choosing VSP providers: one summarizing how legacy VSPs [have been shutdown](https://github.com/decred/vspd/issues/231#issuecomment-774877129), and another showing how the VSP operators [have been upgrading](https://github.com/decred/vspd/issues/231#issuecomment-1046703692) their servers (earlier is better).
 
-- Luxor's Decred mining pool shutdown was [rumored on Reddit](https://www.reddit.com/r/decred/comments/v6d0lw/luxor_shutdown_their_dcr_mining_pool/) after one user received an email asking to withdraw all funds by Jun 10. Screenshot of the email had a notable factual error "DCR is going to PoS". While Decred has [reduced](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki) PoW miners' block reward share from 60% to 10%, there is no intent or even a discussion to switch to pure PoS. As of Jul 9, there has been no official commentary from [@LuxorTechTeam](https://nitter.net/LuxorTechTeam) and their API still report the hashrate of 1.5 Ph/s (1.5% of network's total 95 Ph/s) and 107 miners.
+Luxor's Decred mining pool shutdown was [rumored on Reddit](https://www.reddit.com/r/decred/comments/v6d0lw/luxor_shutdown_their_dcr_mining_pool/) after one user received an email asking to withdraw all funds by Jun 10. Screenshot of the email had a notable factual error "DCR is going to PoS". While Decred has [reduced](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki) PoW miners' block reward share from 60% to 10%, there is no intent or even a discussion to switch to pure PoS. As of Jul 9, there has been no official commentary from [@LuxorTechTeam](https://nitter.net/LuxorTechTeam) and their API still report the hashrate of 1.5 Ph/s (1.5% of network's total 95 Ph/s) and 107 miners.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
+Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
 
 ## Outreach
