--- a/journal/202206.md
+++ b/journal/202206.md
@@ -371,7 +371,6 @@ Secured the following news articles:
 **Attended:**
 
 - @arij [signed a partnership](https://decredcommunity.github.io/events/index/20220601.1) with Moroccan JCI, which is the first branch of the global [Junior Chamber International](https://en.wikipedia.org/wiki/Junior_Chamber_International) NGO in Africa and the Arab world. The partnership includes providing training to members of this organization and companies concerning blockchain and Decred tech.
-- [Decred Social Meetup](https://www.meetup.com/chicago-decred-meetup/events/286491971/) in Chicago, USA. { _drop if we get no response in #events on whether it happened_ }
 
 **Upcoming:**
 
@@ -383,8 +382,6 @@ Secured the following news articles:
 [Decred Magazine](https://www.decredmagazine.com/) has grown by 12 posts in June and continues serving as a mirror for [Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) and [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/) with nice properties like having light pages and working without JavaScript. { _Maybe put DM videos here_ }
 
 **Videos:**
-
-{ _Sorted "oldest first" atm, reorder if needed_ }
 
 - [Decred interview: Co-founder Jake Yocom-Piatt discusses alternate stores-of-value to Bitcoin](https://www.youtube.com/watch?v=_QsWw4EDPyg) by Dan Ashmore for Invezz
 - [Changing the rules - Decred and the State of the Market with Dave Collins - Lead Developer](https://www.youtube.com/watch?v=9rzyYxS3T74) by @Exitus and @phoenixgreen
@@ -409,8 +406,8 @@ Secured the following news articles:
 
 Selected Reddit posts:
 
-- [Should we re-brand Decred DEX?](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/) by @buck54321. @bee has collected the 12 name ideas posted so far [in one table](https://gist.github.com/xaur/5527e5ed280a448e56a62751ab636f14). [QuackDEX](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/ib4o30g/) has a chance.
-- The Weekly Contributions initiative had its [Week 1](https://www.reddit.com/r/decred/comments/v5ipch/weekly_contributions_week_1/), [Week 2](https://www.reddit.com/r/decred/comments/vav9h6/weekly_contributions_week_2/) and [Week 3](https://www.reddit.com/r/decred/comments/vg6rpn/weekly_contributions_week_3/) with a few old-timers trying to bootstrap it with a couple of submissions. Anything from running a full node to making a cool tweet thread or a meme counts, so don't hesitate to participate!
+- [Should we re-brand Decred DEX?](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/) by @buck54321. @bee has collected the 12 name ideas posted so far [in one table](https://gist.github.com/xaur/5527e5ed280a448e56a62751ab636f14). "[QuackDEX](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/ib4o30g/)" has a chance.
+- The Weekly Contributions initiative had its [Week 1](https://www.reddit.com/r/decred/comments/v5ipch/weekly_contributions_week_1/), [Week 2](https://www.reddit.com/r/decred/comments/vav9h6/weekly_contributions_week_2/) and [Week 3](https://www.reddit.com/r/decred/comments/vg6rpn/weekly_contributions_week_3/) with a few old-timers trying to bootstrap it with their submissions. Anything from running a full node to making a cool tweet thread or a meme counts, so don't hesitate to participate!
 
 Selected Twitter discussions:
 
