Media group DM videos

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -379,17 +379,20 @@ Secured the following news articles:
 
 ## Media
 
-[Decred Magazine](https://www.decredmagazine.com/) has grown by 12 posts in June and continues serving as a mirror for [Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) and [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/) with nice properties like having light pages and working without JavaScript. { _Maybe put DM videos here_ }
+[Decred Magazine](https://www.decredmagazine.com/) has grown by 12 posts in June and continues serving as a mirror for [Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) and [Politeia Digest](https://www.decredmagazine.com/tag/politeia-digest/) with nice features like lightweight pages and working well without JavaScript. @phoenixgreen made 3 videos about Decred Magazine:
+
+- [Decred Magazine overview](https://www.youtube.com/watch?v=OQ9adrXDJNo)
+- [Becoming a contributor](https://www.youtube.com/watch?v=g2BE1GoNE98)
+- [Privacy, translations and backups](https://www.youtube.com/watch?v=RJy8Ky7Ovhc)
+
+Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.org/#/room/#writers:decred.org) chat or [@DecredSociety](https://twitter.com/DecredSociety) on Twitter.
 
 **Videos:**
 
 - [Decred interview: Co-founder Jake Yocom-Piatt discusses alternate stores-of-value to Bitcoin](https://www.youtube.com/watch?v=_QsWw4EDPyg) by Dan Ashmore for Invezz
 - [Changing the rules - Decred and the State of the Market with Dave Collins - Lead Developer](https://www.youtube.com/watch?v=9rzyYxS3T74) by @Exitus and @phoenixgreen
-- [Decred Magazine overview](https://www.youtube.com/watch?v=OQ9adrXDJNo) by @phoenixgreen
-- [Decred Magazine - Becoming a contributor](https://www.youtube.com/watch?v=g2BE1GoNE98) by @phoenixgreen
 - [DCRDATA growth and adoption charts](https://www.youtube.com/watch?v=KXfqaYyCUmE) by @phoenixgreen - also as a [blog post](https://www.decredmagazine.com/dcrdata-growth-and-adoption-charts/)
 - [GoDCR: A new lightweight SPV wallet for Decred | Quick Overview](https://www.youtube.com/watch?v=IDilYl3GhKw) by @Exitus
-- [Decred Magazine: Privacy, translations and backups](https://www.youtube.com/watch?v=RJy8Ky7Ovhc) by @phoenixgreen
 - [DCRDATA - Comparing on-chain data](https://www.youtube.com/watch?v=BDKgjgHN83A) by @phoenixgreen - also as a [blog post](https://www.decredmagazine.com/dcrdata-comparing-on-chain-data/)
 - [Interview w/ Jake Yocom-Piatt: Sovereignty, privacy, Decred so far](https://www.youtube.com/watch?v=EAiIAbKQAjI) with Joe K.B. and Dan Ashmore for CoinJournal - also [on Spotify](https://open.spotify.com/episode/7fB2BUmg8zFoIt1F7wZU4l)
 
