--- a/journal/202206.md
+++ b/journal/202206.md
@@ -139,7 +139,7 @@ Internal, developer, and other changes:
 - Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API.
 - Print better [version and compatibility](https://github.com/decred/dcrdex/pull/1645) info in dexcctl output.
 - Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
-- Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequent than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
+- Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequently than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
 - Reduced [lock contention](https://github.com/decred/dcrdex/pull/1563) and fixed a memory leak in swap code.
 - ~7 smaller fixes and improvements.
 - ~9 bug fixes.
@@ -206,14 +206,14 @@ _[TinyDecred](https://github.com/decred/tinydecred) is a Python toolkit for inte
 
 @buck54321 has shared an [update](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) on the second version of TinyDecred he's been working since early 2021:
 
-- There is a working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C [FFI](https://en.wikipedia.org/wiki/Foreign_function_interface)).
+- There are working Bitcoin and Decred SPV wallets that can be imported and used in Python (or any other language with a C [FFI](https://en.wikipedia.org/wiki/Foreign_function_interface)).
 - A large portion of TinyWallet 2 is written in Go, combining the dcrwallet, btcwallet, and dcrlnd stuff behind a single C-shared interface.
 - Since a bunch of wallet code moved to Go, using dcrwallet directly, it is now possible (with some minor modifications to dcrlnd) to use TinyWallet 2 on Lightning.
-- TinyWallet 2 wallet is designed to be available through any platform that supports web apps. This includes all major desktop and mobile platforms and browser extensions.
+- TinyWallet 2 is designed to be available through any platform that supports web apps. This includes all major desktop and mobile platforms and browser extensions.
 - To demonstrate the tech, TinyWallet has prototyped in-wallet private chat via Lightning, and a website that your wallet can interact with to guide the user into opening a Lightning channel and even finding others to add to their address book.
 - TinyWallet 2 will have a DEX integration to trade DCR/BTC directly in the wallet.
 
-A lot of that is still a heavy work-in-progress but is quite exciting already. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) chat to follow the development.
+A lot of this is still work-in-progress but is quite exciting already. Read the [full post](https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg) in Matrix and join the [#tinydecred](https://matrix.to/#/#tinydecred:decred.org/) chat to follow the development.
 
 
 ### Documentation
@@ -238,7 +238,7 @@ _Image: Updated DCR issuance projection._
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.org website._
 
 - Added [disclaimer to Exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know that only DCRDEX is self-custodial and will not request additional information.
-- Removed [Contributors page](https://github.com/decred/dcrweb/pull/1047) after multiple discussions with the general consensus that it had poorly reflected reality.
+- Removed [Contributors page](https://github.com/decred/dcrweb/pull/1047) after multiple discussions reaching the general consensus that it had reflected reality poorly.
 - [Updated](https://github.com/decred/dcrweb/pull/1048) Hugo, nginx, and Lottie webplayer. 
 - Removed the outdated [1.6 Release page](https://github.com/decred/dcrweb/pull/1049).
 - [Added](https://github.com/decred/dcrweb/pull/1044) GoDCR to the [Wallets page](https://decred.org/wallets/).
@@ -327,13 +327,13 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 44 nodes (-
 
 ## Ecosystem
 
-[Guardarian](https://guardarian.com/) has [announced](https://www.reddit.com/r/decred/comments/v7mske/more_ways_to_buy_decred/) that buying and selling DCR for fiat is possible on their platform. Supported fiat currencies are EUR, USD, and GBP, and they can be sent over systems like MasterCard, Visa, SWIFT, SEPA, and Faster Payments. Fiat payouts go directly to user's bank account, while purchased coins go directly to users's wallet. There is a minimum amount to buy (EUR 30) and the service fee (EUR 2.49) is added to the exchange rate. Guardarian is licensed in Estonia.
+[Guardarian](https://guardarian.com/) has [announced](https://www.reddit.com/r/decred/comments/v7mske/more_ways_to_buy_decred/) that buying and selling DCR for fiat is possible on their platform. Supported fiat currencies are EUR, USD, and GBP, and they can be sent over payment processors like MasterCard, Visa, SWIFT, SEPA, and Faster Payments. Fiat payouts go directly to the user's bank account, while purchased coins go directly to the user's wallet. There is a minimum amount to buy (EUR 30) and the service fee (EUR 2.49) is added to exchanges. Guardarian is licensed in Estonia.
 
 [Bitpanda](https://www.bitpanda.com/en) announced that [DCR is listed](https://twitter.com/bitpanda/status/1537047267647037442) on their exchange and acknowledged its open governance and sustainable funding. Bitpanda is [headquartered](https://en.wikipedia.org/wiki/Bitpanda) in Vienna, Austria.
 
-BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing to stake with less than a full ticket (recently around 220 DCR). The reveal came after [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for its custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
+BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing users to stake with less than a full ticket (recently around 220 DCR). The reveal came after [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for the service's custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
 
-[JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs and get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins and has 3 jobs posted. The founder has dropped the announcement in our #trading chat, saying that DCR is supported since launch:
+[JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs to get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins and has 3 jobs posted. The founder has dropped the announcement in our #trading chat, saying that DCR is supported since launch:
 
 > you can post a job and choose dcr as a payment coin, added it just for the bison crew 😉 [@Toussaint](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$uxS2SUWZRUVbKH9DMiok_uuiomuZmq82q7bI61wDuW0))
 
@@ -370,7 +370,7 @@ Secured the following news articles:
 
 **Attended:**
 
-- @arij [signed a partnership](https://decredcommunity.github.io/events/index/20220601.1) with Moroccan JCI, which is the first branch of the global [Junior Chamber International](https://en.wikipedia.org/wiki/Junior_Chamber_International) NGO in Africa and the Arab world. The partnership includes providing training to members of this organization and companies concerning blockchain and Decred tech.
+- @arij [signed a partnership](https://decredcommunity.github.io/events/index/20220601.1) with Moroccan JCI, which is the first branch of the global [Junior Chamber International](https://en.wikipedia.org/wiki/Junior_Chamber_International) NGO in Africa and the Arab world. The partnership includes providing training to members of this organization and other companies, concerning blockchain and Decred tech.
 
 **Upcoming:**
 
