--- a/journal/202206.md
+++ b/journal/202206.md
@@ -4,16 +4,12 @@
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+Highlights for June:
 
 - The Ethereum smart contract used in DCRDEX passed its first audit with great results.
 - Politeia was busy with 3 proposals approved, 1 rejected and 3 new proposals submitted.
-- First treasury spend transaction approved with the fixed spend policy { it was first after the fix, right? }
-- More ecosystem news, DCR listed on 2 exchanges (Guardarian and BitPanda)
-- 
-- 
-
-}
+- First treasury spend transaction approved under the corrected spend policy (DCP-7).
+- DCR listed on 2 exchanges, Guardarian and BitPanda.
 
 Contents:
 
