202206: fix unwanted table formatting

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -378,7 +378,7 @@ Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.o
 - [Decred interview: Co-founder Jake Yocom-Piatt discusses alternate stores-of-value to Bitcoin](https://www.youtube.com/watch?v=_QsWw4EDPyg) by Dan Ashmore for Invezz
 - [Changing the rules - Decred and the State of the Market with Dave Collins - Lead Developer](https://www.youtube.com/watch?v=9rzyYxS3T74) by @Exitus and @phoenixgreen
 - [DCRDATA growth and adoption charts](https://www.youtube.com/watch?v=KXfqaYyCUmE) by @phoenixgreen - also as a [blog post](https://www.decredmagazine.com/dcrdata-growth-and-adoption-charts/)
-- [GoDCR: A new lightweight SPV wallet for Decred | Quick Overview](https://www.youtube.com/watch?v=IDilYl3GhKw) by @Exitus
+- [GoDCR: A new lightweight SPV wallet for Decred - Quick Overview](https://www.youtube.com/watch?v=IDilYl3GhKw) by @Exitus
 - [DCRDATA - Comparing on-chain data](https://www.youtube.com/watch?v=BDKgjgHN83A) by @phoenixgreen - also as a [blog post](https://www.decredmagazine.com/dcrdata-comparing-on-chain-data/)
 - [Interview w/ Jake Yocom-Piatt: Sovereignty, privacy, Decred so far](https://www.youtube.com/watch?v=EAiIAbKQAjI) with Joe K.B. and Dan Ashmore for CoinJournal - also [on Spotify](https://open.spotify.com/episode/7fB2BUmg8zFoIt1F7wZU4l)
 
