--- a/journal/202206.md
+++ b/journal/202206.md
@@ -321,7 +321,7 @@ BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) t
 
 [JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs to get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins and has 3 jobs posted. The founder has dropped the announcement in our #trading chat, saying that DCR is supported since launch:
 
-> you can post a job and choose dcr as a payment coin, added it just for the bison crew 😉 [@Toussaint](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$uxS2SUWZRUVbKH9DMiok_uuiomuZmq82q7bI61wDuW0))
+> you can post a job and choose dcr as a payment coin, added it just for the bison crew 😉 \[[@Toussaint](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$uxS2SUWZRUVbKH9DMiok_uuiomuZmq82q7bI61wDuW0)\]
 
 @jz [posted a script](https://twitter.com/jz_bz/status/1535350896091189249) for spinning up a Decred full node on popular systemd-based Linux distros with a simple `curl -L node.dcr.pw | bash` command. It is a good practice to not blindly run code from the Internet and read it before executing (the script is just 40 lines).
 
