--- a/journal/202207.md
+++ b/journal/202207.md
@@ -348,6 +348,9 @@ Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agent
 
 Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https://vspd.bass.cf/) by {} and [dcrhive.com](https://dcrhive.com/) by @kozel. { Recap of plans in https://www.reddit.com/r/decred/comments/vt0wrt/dcr_hive_a_new_lowish_fee_vsp_coming_to_your/ }
 
+[jz says](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org) Binance has finally reduced required DCR confs from 20 to 6.
+
+
 { _Check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list._ }
 
 { _Check https://github.com/decred/dcrwebapi/pulls for new VSPs under review._ }
