Dev DCRDEX part 1

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -157,7 +157,31 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
-- {}
+{ _Group by topic_ }
+
+- Optimized [high resource use](https://github.com/decred/dcrdex/pull/1684) when typing price.
+- Fixed creating native BTC wallet with [too small fee](https://github.com/decred/dcrdex/pull/1657).
+- Added a short delay for [sending ZEC](https://github.com/zcash/zcash/issues/6045) after a block is mined in load tests, to workaround an issue with Zcash [output selection](https://github.com/zcash/zcash/issues/6045).
+- Clarified the message about [disabling a DEX server](https://github.com/decred/dcrdex/pull/1634). With the recent account discovery features, a server can be disabled and reenabled as needed without paying the registration fee again.
+- Fixed native BTC SPV wallet getting wrecked after [sending too small](https://github.com/decred/dcrdex/pull/1705) ("dust") amount, which should not be allowed.
+- Enforced [code formatting](https://github.com/decred/dcrdex/pull/1699) check in CI builds for consistency. { _small, maybe merge_ }
+- Increase ETH [gas fee cap](https://github.com/decred/dcrdex/pull/1692) for redemptions when base fee is too high.
+- Parse additional [options](https://github.com/decred/dcrdex/pull/1694) on TradeForm. { _not sure what it does, maybe just merge into "other improvements"_ }
+- Fixed search box [layout](https://github.com/decred/dcrdex/pull/1704) on Markets page. { _small, merge_ }
+- Added ability to [export ETH wallet](https://github.com/decred/dcrdex/pull/1648) to Metamask.
+- Fixed block monitoring for DCR SPV wallets and improved [connectivity error messages](https://github.com/decred/dcrdex/pull/1701).
+- Fixed [Filled percentage](https://github.com/decred/dcrdex/pull/1711) display for market buys.
+- Added general support for [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1686) and implemented it for BTC. This allows locked coins to be re-established after wallet configuration was changed. Prior to this change, reconfiguring a wallet with live orders was unlocking the funds but attempting to use them resulted in an error.
+- Fixed users getting [order completion credit](https://github.com/decred/dcrdex/pull/1707) for revoked orders in rare circumstances.
+- Support [external source](https://github.com/decred/dcrdex/pull/1654) of transaction fee estimates for DCR wallets (dcrdata's Insight API), to serve as a fallback when the wallet cannot get the fee estimate locally.
+- Display [fiat equivalents](https://github.com/decred/dcrdex/pull/1600) on various pages.
+
+- Testing improvements { 1691 }
+- Other improvements and fixes { 1709 1713 1723 }
+
+{ image candidates: 1648 1600 }
+
+_Image: DCRDEX showing fiat equivalents to ease the transition from the legacy financial system. { 1600 }_
 
 
 ### Android Wallet
