--- a/journal/202207.md
+++ b/journal/202207.md
@@ -76,7 +76,17 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- {}
+In Progress: 
+
+[TSpend voting is being introduced](https://github.com/decred/decrediton/pull/3787) into Decredition. {image candidate}
+
+- The Treasury Spending tab will display pending tspends and the ability to vote.
+- Adds notification of the new active and not yet voted tspend to the home view.
+- Adds the treasury/tspends votes that have been set on vsp to the ticket details header.
+ 
+DEX Tab:
+
+- Add the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
 
 
 ### Politeia
