--- a/journal/202207.md
+++ b/journal/202207.md
@@ -140,7 +140,7 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 { _Check https://github.com/decred/cspp/commits/master ._}
 
-- {}
+- [@jy-p says he's made a lot of progress](https://youtu.be/1RBBNnrPqc0?t=123) with @jrick on Peer-to-Peer mixing for Decred's Stakeshuffle privacy service. Currently Stakeshuffle relies on a central server at https://mix.decred.org/.
 
 
 ### DCRDEX
