--- a/journal/202207.md
+++ b/journal/202207.md
@@ -158,7 +158,19 @@ _[GoDCR](https://github.com/planetdecred/godcr) is a lightweight desktop GUI wal
 
 { _Check https://github.com/planetdecred/godcr/commits/master ._}
 
-- {}
+- Implemented a new [Staking Design](https://github.com/planetdecred/godcr/pull/1016).
+- Fixed [event handling](https://github.com/planetdecred/godcr/pull/1023) of wallet deletion. 
+- Added DEX [server selector](https://github.com/planetdecred/godcr/pull/1011).
+- Updated wallet settings page to the [latest UI](https://github.com/planetdecred/godcr/pull/1007).
+- Implemented a new [overview page](https://github.com/planetdecred/godcr/pull/1008) design.
+- Updated [transaction row](https://github.com/planetdecred/godcr/pull/893) information.
+
+In Progress:
+
+- New [transactions page](https://github.com/planetdecred/godcr/issues/1025) design.
+- Enable support for dcrlibwallet's [backend service](https://github.com/planetdecred/godcr/issues/1020).
+- New [StakeShuffle page](https://github.com/planetdecred/godcr/pull/1024) layout.
+- Activate [Proposal search](https://github.com/planetdecred/godcr/pull/1027).
 
 
 ### dcrdata
