--- a/journal/202207.md
+++ b/journal/202207.md
@@ -179,7 +179,11 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- {}
+- Added a [verify message](https://github.com/decred/dcrdata/pull/1911) feature to dcrdata. Along with a[Request Body Limiter](https://github.com/decred/dcrdata/commit/c9d07773f51cc93186d6c4d1c1f74f8c170f297d) of 2MiB, down from 10MiB default for the verify message feature.
+
+In Progress:
+
+- Devs are looking into [pagination problems](https://github.com/decred/dcrdata/issues/1925) on the Treasury page.
 
 
 ### TinyDecred
