--- a/journal/202207.md
+++ b/journal/202207.md
@@ -66,7 +66,13 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
-- {}
+Rpcserver:
+
+- Now [allows](https://github.com/decred/dcrwallet/pull/2173) 'signrawtransasction' private keys. This resolves a problem whereby it did not account for the fact that p2pk addresses no longer automatically convert their stringized output to p2pkh addresses.
+
+Ticketbuyer:
+
+- Does not attempt to [mix change](https://github.com/decred/dcrwallet/pull/2171) if CoinShuffle++ server is unset. 
 
 
 
